# drug-response-distribution

./: .gitignore  LICENSE-COMMERCIAL  README.md  pyproject.toml  pyrightconfig.json
experiments/: README.md
experiments/00_data_preparation/: PLAN.md  README.md
experiments/00_data_preparation/jobs/: download.py  preprocess.py
experiments/01_metric_decomposition/: README.md
experiments/01_metric_decomposition/01_global_vs_perdrug/: PLAN.md
experiments/01_metric_decomposition/02_metric_selection/: PLAN.md
experiments/01_metric_decomposition/03_baselines/: PLAN.md  README.md
experiments/02_reproductions/: README.md
experiments/02_reproductions/01_paso/: README.md
experiments/02_reproductions/02_deepcdr/: README.md
experiments/02_reproductions/03_drugcell/: README.md
experiments/03_drug_feature_null/: README.md  smoke_test.sh
experiments/03_drug_feature_null/01_oracle_bounds/: PLAN.md  README.md
experiments/03_drug_feature_null/02_representation_ablation/: PLAN.md  README.md
experiments/03_drug_feature_null/03_model_robustness/: PLAN.md  README.md
experiments/03_drug_feature_null/04_split_robustness/: PLAN.md  README.md
experiments/04_cell_representation/: README.md
experiments/05_solutions/: README.md  smoke_test.sh
experiments/06_external_validation/: README.md
paper/: Makefile  bibliography.bib  main.bbl  main.tex
paper/data/: metrics.json  numbers.tex
paper/sections/: abstract.tex  discussion.tex  introduction.tex  methods_online.tex  references.tex  results.tex  supplementary.tex
scripts/: extract_ssot.py  figure_style.py  generate_paper_numbers.py  render_reports.py
src/: __init__.py
src/analysis/: attention.py
src/data/: beataml.py  ctrpv2.py  dataset.py  dataset_combined.py  drug_embeddings.py  drug_features.py  drug_graph.py  drug_targets.py  gdsc1.py  omics_utils.py  pathway_features.py  prism.py  repurposing_hub.py  smiles_tokenize.py  splits.py
src/evaluation/: __init__.py  metrics.py  per_drug.py  per_drug_metrics.py  stats.py
src/models/: drug_gnn.py  drug_mlp.py  mlp.py  smiles_cnn.py  transformer_encoder.py  transformer_encoder_gnn.py  transformer_encoder_multitask.py  transformer_encoder_sman.py  transformer_encoder_smiles.py
src/training/: config.py  loop.py  trainer.py  trainer_drug.py
src/utils/: __init__.py  encoders.py  paso_folds.py  response_matching.py  ridge.py  solutions.py
tests/: conftest.py
tests/data/: test_dataset.py  test_drug_features.py  test_omics_utils.py  test_prism.py  test_splits.py
tests/evaluation/: test_metrics.py  test_per_drug.py  test_stats.py
tests/experiments/: test_paso_decomposition_split.py
tests/models/: test_attention.py  test_drug_mlp.py  test_mlp.py  test_transformer_encoder.py
tests/training/: test_config.py  test_loop.py
tests/utils/: test_encoders.py  test_paso_folds.py  test_response_matching.py  test_ridge_normalize.py  test_solutions.py
(+452 files in other folders)
